------------------
 - Default values of optional elements are not set by default anymore (#423)
 - The call signature for Client.create_message() was changed. It now requires
   the service argument:

     ``Client.create_message(service, operation_name, *args, **kwargs)``

 - Choice elements now only work with keyword arguments and raise an exception
   if positional arguments are passed (#439)


1.6.0 (2017-04-27)
------------------
 - Implement ValueObject.__json__ for json serialization (#258)
 - Improve handling of unexpected elements for soap:header (#378)
 - Accept unexpected elements in complexTypes when strict is False
 - Fix elementFormDefault/attributeFormDefault for xsd:includes (#426)


1.5.0 (2017-04-22)
------------------
 - Fix issue where values of indicators (sequence/choice/all) would
   write to the same internal dict. (#425)
 - Set default XML parse mode to strict as was intended (#332)
 - Add support for pickling value objects (#417)
 - Add explicit Nil value via ``zeep.xsd.Nil`` (#424)
 - Add xml_huge_tree kwarg to the Client() to enable lxml's huge_tree mode,
   this is disabled by default (#332)
 - Add support to pass base-types to type extensions (#416)
 - Handle wsdl errors more gracefully by disabling the invalid operations
   instead of raising an exception (#407, #387)


1.4.1 (2017-04-01)
------------------
 - The previous release (1.4.0) contained an incorrect dependency due to
   bumpversion moving all 1.3.0 versions to 1.4.0. This fixes it.


1.4.0 (2017-04-01)
------------------
 - Hardcode the xml prefix to the xml namespace as defined in the specs (#367)
 - Fix parsing of unbound sequences within xsd choices (#380)
 - Use logger.debug() for debug related logging (#369)
 - Add the ``Client.raw_response`` option to let zeep return the raw
   transport response (requests.Response) instead of trying to parse it.
 - Handle minOccurs/maxOccurs properlhy for xsd:Group elements. This also