@@ -8,6 +8,8 @@
 
  - Choice elements now only work with keyword arguments and raise an exception
    if positional arguments are passed (#439)
+ - Implement initial multiref support for SOAP RPC (#326). This was done using
+   really good real-world tests from vstoykov (thanks!)
 
 
 1.6.0 (2017-04-27)
